--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,12 @@ html, body {
   height:50px;
   background-color: #2d2c4d;
 }
-.mylogo{width:230px;height:32px;margin-top:9px}
+.mylogo{
+  width:220px;
+  height:30px;
+  margin-top:10px;
+}
+
 *, ::after, ::before {
     box-sizing: border-box;
     -webkit-box-shadow: none !important;
@@ -85,6 +90,17 @@ img {
   opacity: 1;
   visibility: visible;
 }
+
+.filter{
+  top:-8px;
+  color:white;
+  width:0px;
+  height:35px;
+  z-index:100000;
+  right:10px;
+  position:fixed;
+}
+
 .card {
   border-radius:0px;
   border:none;
@@ -177,5 +193,7 @@ img {
   border-radius:20px;
   padding:5px;
 }
+
+.grid-apk{grid-template-columns:31.66% 31.66% 31.66%;grid-row-gap:10px}
 
 .blocks{display:flex;flex:0 0 100%;max-width:160%;padding:0 4px 12px 12px}.blocks--horizontal{margin-bottom:-25px;margin-top:-5px;flex-wrap:nowrap;overflow-x:auto;justify-content:flex-start;-webkit-overflow-scrolling:touch}.blocks .block{flex:1 0 80px;max-width:80px}.blocks .block a{display:block;text-decoration:none;max-width:64px}.blocks .block .block__image{max-width:100%;height:100%;display:block;object-fit:cover;border:2px solid #c8c7cc;border-radius:50%;padding:3px;margin-bottom:6px}.block__title{height:13px;overflow:hidden;text-overflow:ellipsis;display:-webkit-box;-webkit-line-clamp:1;line-clamp:1;-webkit-box-orient:vertical}.blocks .block .block__title{font-size:11px;font-weight:400;line-height:1.2;color:#000;text-align:center;word-break:break-word}.blocks .block .block__button{margin:16px;padding:12px;border-radius:4px;display:flex;text-decoration:none;font-size:12px;font-weight:600;line-height:1.4;align-items:center;transition:background 225ms,color 375ms ease-out;border:1px solid rgba(0,122,255,.5);max-width:100%;align-items:center;justify-content:center;color:#007aff}.blocks .block .block__button:hover{background-color:#007aff;color:#fff}.blocks-header{display:flex;align-items:center;justify-content:flex-start;padding:0 16px 12px}.blocks-header h3{font-size:15px;font-weight:400;flex:1 0 auto}.block{padding-top:7px}.block:hover{-ms-transform:scale(1.1);-webkit-transform:scale(1.1);transform:scale(1.1)}.shiny,.shiny:before{display:inline-block}@-webkit-keyframes shiny-btn{0%{-webkit-transform:scale(0) rotate(45deg);opacity:0}80%{-webkit-transform:scale(0) rotate(45deg);opacity:.5}81%{-webkit-transform:scale(4) rotate(45deg);opacity:1}100%{-webkit-transform:scale(50) rotate(45deg);opacity:0}}.shiny{overflow:hidden;position:relative}.shiny:before{position:absolute;content:'';top:-180px;left:0;width:30px;height:100%;background-color:#fff;animation:3s ease-in-out infinite shiny-btn}@keyframes bounce{0%,15%,25%,5%{-webkit-transform:translateY(0);transform:translateY(0)}10%{-webkit-transform:translateY(-20px);transform:translateY(-20px)}20%{-webkit-transform:translateY(-10px);transform:translateY(-10px)}}img.bounce{animation:5s infinite bounce}@keyframes shakeMe{10%,14%,18%,2%,6%{transform:translate3d(-5px,0,0)}12%,16%,4%,8%{transform:translate3d(5px,0,0)}18.1%{transform:translate3d(0,0,0)}}.shake{animation:5s infinite shakeMe}.judul-iklan{overflow:hidden;font-style:bold;text-overflow:ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:2}.rupiah {color:#EE4D2D;display:flex;float:left;padding-top:7px;font-size:11pt}
